--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,6 +1,20 @@
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html{
+    font-family: "Mulish", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+
 h1 {
     color: $font-color;
     @include main-font-center;
