sviluppato altri elementi del main

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -16,9 +16,5 @@ html{
 
 header{
     // background-color: gray;
-    height: 550px;
-}
-h1 {
-    color: $font-color;
-    @include main-font-center;
+   margin-bottom: 30px;
 }
